--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -241,6 +241,12 @@ animations {
     animation = workspaces, 1, 5, wind
 }
 
+general {
+    snap { # snapping for floating windows
+        enabled = true
+    }
+}
+
 
 # // █▀ █▀█ █░█ █▀█ █▀▀ █▀▀
 # // ▄█ █▄█ █▄█ █▀▄ █▄▄ ██▄
